[package]
categories = ["data-structures"]
description = "A symbol table that's fast, concurrent, and gives stable references."
edition = "2021"
exclude = ["tests/*.txt", "bench/*"]
homepage = "https://github.com/mwillsey/string_interner"
keywords = ["interner", "intern", "symbol"]
license = "MIT"
name = "symbol_table"
repository = "https://github.com/mwillsey/string_interner"
version = "0.3.0"

[features]
default = []
global = []

[dependencies]
ahash = {version = "0.7.6", default-features = false}
hashbrown = "0.12"
serde = {version = "1", optional = true, features = ["derive"]}

[dev-dependencies]
serde_json = "1.0"
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
