[package]
categories = ["data-structures"]
description = "A symbol table that's fast, concurrent, and gives stable references."
edition = "2021"
exclude = ["tests/*.txt", "bench/*"]
homepage = "https://github.com/mwillsey/string_interner"
keywords = ["interner", "intern", "symbol"]
license = "MIT"
name = "symbol_table"
repository = "https://github.com/mwillsey/string_interner"
version = "0.5.0"

[features]
default = []
global = []

[dependencies]
hashbrown = "0.15"
serde = { version = "1", optional = true, features = ["derive"] }
crossbeam-utils = "0.8.4"
foldhash = "0.1.3"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
