[package]
categories = ["data-structures"]
description = "A symbol table that's fast, concurrent, and gives stable references."
edition = "2021"
exclude = ["tests/*.txt", "bench/*"]
homepage = "https://github.com/mwillsey/string_interner"
keywords = ["interner", "intern", "symbol"]
license = "MIT"
name = "symbol_table"
repository = "https://github.com/mwillsey/string_interner"
version = "0.5.0"

[features]
default = ["std"]
std = []
global = []

[dependencies]
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "inline-more", "raw-entry"] }
serde = { version = "1", optional = true, features = ["derive"] }
crossbeam-utils = { version = "0.8.4", default-features = false }
foldhash = { version = "0.1.3", default-features = false }
spin = { version = "0.10", default-features = false, features = ["mutex", "once", "spin_mutex"] }

[dev-dependencies]
serde_json = "1.0"
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
