[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symbol_table = { path = ".." }
criterion = "0.3"
pprof = { version = "0.8", features = ["criterion", "flamegraph"] }
rayon = "1"
string-interner = "0.14"
lasso = { version = "0.6", features = ["multi-threaded"] }
